// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App includes Header 1`] = `
<div>
  <div
    className="header"
  >
    <h1>
      Hello World
    </h1>
  </div>
  <ul>
    <li>
      Home
    </li>
    <li>
      Sign Up
    </li>
    <li>
      Hire Us Now!
    </li>
  </ul>
  <button
    onClick={[Function]}
  >
    Hi
  </button>
</div>
`;

exports[`exploring snapshot 1`] = `
<div
  className="header"
>
  <h1>
    Hello World
  </h1>
</div>
`;

exports[`navigation 1`] = `
<ul>
  <li>
    Home
  </li>
  <li>
    Sign Up
  </li>
  <li>
    Hire Us Now!
  </li>
</ul>
`;
